--- a/crates/streamdata/Cargo.toml
+++ b/crates/streamdata/Cargo.toml
@@ -6,11 +6,18 @@ edition = "2021"
 [dependencies]
 tracing = "0.1"
 
+thiserror = { version = "1", optional = true }
 bytes = { version = "1", optional = true }
 serde = { version = "1", optional = true }
 serde_json = { version = "1", optional = true }
+k8s-openapi = { version = "0.18", default-features = false, features = ["api"], optional = true }
+
+[dev-dependencies]
+rand = "0.8"
 
 [features]
-default = ["bytes", "serde_json"]
+default = ["bytes", "serde_json", "k8s-openapi"]
 bytes = ["dep:bytes"]
+
 serde_json = ["dep:serde", "dep:serde_json"]
+k8s-openapi = ["dep:k8s-openapi", "dep:thiserror"]
