--- a/crates/streamdata/Cargo.toml
+++ b/crates/streamdata/Cargo.toml
@@ -9,6 +9,10 @@ readme = "../../README.md"
 keywords = ["sans-io", "stream", "deserialization"]
 categories = ["encoding", "network-programming"]
 
+[package.metadata.docs.rs]
+no-default-features = true
+features = ["small"]
+
 [dependencies]
 tracing = "0.1"
 
@@ -22,7 +26,10 @@ k8s-openapi = { version = "0.18", default-features = false, features = ["api"], 
 rand = "0.8"
 
 [features]
-default = ["bytes", "serde_json", "k8s-openapi"]
+default = ["small", "heavy"]
+small = ["bytes", "serde_json"]
+heavy = ["k8s-openapi"]
+
 bytes = ["dep:bytes"]
 
 serde_json = ["dep:serde", "dep:serde_json"]
