--- a/crates/streamdata/Cargo.toml
+++ b/crates/streamdata/Cargo.toml
@@ -21,16 +21,18 @@ bytes = { version = "1", optional = true }
 serde = { version = "1", optional = true }
 serde_json = { version = "1", optional = true }
 k8s-openapi = { version = "0.18", default-features = false, features = ["api"], optional = true }
+tokio-util = { version = "0.7", default-features = false, features = ["codec"], optional = true }
 
 [dev-dependencies]
 rand = "0.8"
 
 [features]
 default = ["small", "heavy"]
-small = ["bytes", "serde_json"]
+small = ["bytes", "serde_json", "tokio-util"]
 heavy = ["k8s-openapi"]
 
 bytes = ["dep:bytes"]
 
 serde_json = ["dep:serde", "dep:serde_json"]
 k8s-openapi = ["dep:k8s-openapi", "dep:thiserror"]
+tokio-util = ["dep:tokio-util", "dep:bytes"]
