Add test cases for serde_json

--- a/crates/streamdata/Cargo.toml
+++ b/crates/streamdata/Cargo.toml
@@ -25,6 +25,7 @@ tokio-util = { version = "0.7", default-features = false, features = ["codec"], 
 
 [dev-dependencies]
 rand = "0.8"
+serde = { version = "1", features = ["derive"] }
 
 [features]
 default = ["small", "heavy"]
