--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -33,6 +33,7 @@ rustflags = [
   "-Wclippy::match_on_vec_items",
   # A few exceptions.
   "-Aclippy::derive-partial-eq-without-eq",
+  "-Aclippy::negative-feature-names",
 ]
 
 [env]
