--- a/crates/async-streamdata/Cargo.toml
+++ b/crates/async-streamdata/Cargo.toml
@@ -23,9 +23,10 @@ tokio = { version = "1", default-features = false, features = ["io-util"], optio
 futures-io = { version = "0.3", default-features = false, features = ["std"], optional = true }
 futures-util = { version = "0.3", default-features = false, features = ["std", "io"], optional = true }
 http-body = { version = "0.4", default-features = false, features = [], optional = true }
+quinn = { version = "0.10", default-features = false, features = [], optional = true }
 
 [features]
-default = ["tokio", "futures-io", "http-body", "futures-core"]
+default = ["tokio", "futures-io", "http-body", "futures-core", "quinn"]
 
 no-async-fn-in-trait-feature = []
 async-trait = ["dep:async-trait", "no-async-fn-in-trait-feature"]
@@ -34,6 +35,7 @@ futures-core = []
 futures-io = ["dep:futures-io", "dep:futures-util"]
 http-body = ["dep:http-body"]
 tokio = ["dep:tokio"]
+quinn = ["dep:quinn"]
 
 async-std = ["futures-io"]
 futures = ["futures-io", "futures-core"]
